Cambiado el binding para que bindee primero funciones.Falta depurarlo. Pequeñas modificaciones para arreglar bugs.